# liase

./: AGENTS.md  Cargo.toml  config.example.toml  index.html  styles.css
crates/wire-types/: Cargo.toml
crates/wire-types/src/: lib.rs
plans/: 2026-02-17-init.md  2026-03-10-github-monitor.md
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  github.rs  lib.rs  main.rs  store.rs
src/app/: settings.rs  timeline.rs
