[package]
name = "liase-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures-lite = "2.6.0"
iti = { git = "https://github.com/schell/iti.git", default-features = false, features = ["embed-assets", "system9"] }
liase-wire-types = { path = "crates/wire-types" }
log.workspace = true
mogwai = "0.7.2"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Storage",
]

[workspace]
members = [
  "crates/wire-types",
  "src-tauri",
]

[workspace.dependencies]
log = "0.4.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
tymigrawr = { path = "../tymigrawr/main/crates/tymigrawr" }
